--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="jota" src="imagens/Logo.png" alt="Jota Dub">    
         <a class="container__botao" href="">Assine por 12x de R$ 70*</a>
         <a class="container__botao botao_secundario" href="">Assinar somente o JotaDub</a>
-        <p>*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
     </div>
     </section>
 
