--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <section class="container principal">
     <div>
-        <h1>Com o curso de dublagem <span class="laranja">Jota</span><span class="azul">Dub</span>, você poderá finalmente realizar seu sonho de se tornar um dublador profissional</h1>
-        <img class="jota" src="imagens/Logo.png" alt="Jota Dub">    
+        <h1 class="container__titulo">Com o curso de dublagem <span class="laranja">Jota</span><span class="azul">Dub</span>, você poderá finalmente realizar seu sonho de se tornar um dublador profissional</h1>
+        <img class="container__imagem" src="imagens/Logo.png" alt="Jota Dub">    
         <a class="container__botao" href="">Assine por 12x de R$ 70*</a>
         <a class="container__botao botao_secundario" href="">Assinar somente o JotaDub</a>
         <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
