--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
     </div>
     </section>
+    <section class="container secundario">
+        <div>
+        <img src="imagens/Microfone.png" alt="" class="secundario__imagem">
+        </div>
+        <div class="secundario__div">
+        <h2 class="descricao__titulo"><span class="azul">Dub</span>le o que mais gosta</h2>
+        <p class="descricao__texto">Aproveite a liberdade que nós damos a você, enquanto você aprende conosco, permitimos você compartilhar com seus professores os projetos teste que você realizar!</p>
+        </div>
+    </section>
 
 </body>
 </html>
