--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
         <p class="descricao__texto">Aproveite a liberdade que nós damos a você, enquanto você aprende conosco, permitimos você compartilhar com seus professores os projetos teste que você realizar!</p>
         </div>
     </section>
+    <section class="container terciario">
+        <div class="terciario__div">
+            <p class="terciario__texto">O curso <span class="laranja">Jota</span><span class="azul">Dub</span> oferece aulas comunicativas para treinar várias áreas da dublagem profissional, tanto quanto atuação, entonação, caracterização da voz e muitos outros.</p>
+            <a href="" class="container__botao botao_terciario">Assine o JotaDub</a>
+        </div>
+        <div>
+            <img src="imagens/Falando.png" alt="" class="terciario__fala">
+        </div>
+        <div>
+            <img src="imagens/Atuando.png" alt="" class="terciario__mascara">
+        </div>
+    </section>
+
+    <section class="container quaternario">
+        <div>
+            <img src="imagens/wifi.png" alt="" class="quaternario__imagem">
+        </div>
+        <div class="quaternario__div">
+            <h2 class="internet__titulo">Não perca nada</h2>
+            <p class="internet__descricao">Reassista seus vídeos de auxílio quando e onde quiser com nosso sistema de download offline, com este curso você estará logo logo incorporando personagens como nunca.</p>
+        </div>
+    </section>
 
 </body>
 </html>
